--- a/public/views/laboratorista/examenes.html
+++ b/public/views/laboratorista/examenes.html
@@ -6,11 +6,11 @@
         <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
 
         <div class="row">
-          <div class="col s8"><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar resultados"></div>
-          <div ng-click="nuevoResultado(examen)" style="padding-top:10px;" class="col"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
+          <div class="col m7 s12"><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar resultados"></div>
+          <div ng-click="nuevoResultado(examen)" style="padding-top:10px;" class="col m5 s12"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
 
         </div>
-        
+        <div class="table-responsive">
           <table class="table table-striped table-bordered">
           <thead>
             <tr>
@@ -35,6 +35,8 @@
           </tbody>
         </table>
         </div>
+          
+        </div>
     </li>
 </ul>
 
@@ -42,40 +44,37 @@
 <div id="modalCrearResultado" class="modal" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
   <form > 
     <div class="modal-body">
-
         <div class="row">
           <div class="input-field col s12">
-            <input id="parametro" type="text" class="validate" ng-model="nuevo_resultado.parametro">
-            <label for="parametro">Parametro medico</label>
+            <input id="parametro" type="text" class="validate" ng-model="nuevo_resultado.parametro" required>
+            <label for="parametro">Parámetro medico</label>
           </div>
         </div>
 
         <div class="row">
           <div class="input-field col s12">
-            <input id="unidades" type="text" class="validate" ng-model="nuevo_resultado.unidades">
+            <input id="unidades" type="text" class="validate" ng-model="nuevo_resultado.unidades" required>
             <label for="unidades">Unidades</label>
           </div>
         </div>
 
         <div class="row">
           <div class="input-field col s12">
-            <input id="resultado" type="text" class="validate" ng-model="nuevo_resultado.resultado">
+            <input id="resultado" type="text" class="validate" ng-model="nuevo_resultado.resultado" required>
             <label for="resultado">Resultado</label>
           </div>
         </div>
 
         <div class="row">
           <div class="input-field col s12">
-            <input id="valores_referencia" type="text" class="validate" ng-model="nuevo_resultado.valores_referencia">
-            <label for="valores_referencia">Valores de referencia</label>
+            <input id="valores_referencia" type="text" class="validate" ng-model="nuevo_resultado.valores_referencia" required>
+            <label for="valores_referencia">Valores de Referencia</label>
           </div>
         </div>
-
     </div>
-
     <div class="row modal-footer">
-      <button type="submit" class="btn btn-primary col s5 left" ng-click="agregarResultado()">Crear</button>
-      <button type="reset" class="btn btn-default col s5 right">Cancelar</button>
+          <button type="submit" class="btn btn-primary col s5 left" ng-click="agregarResultado()">Crear</button>
+          <button type="reset" class="btn btn-default col s5 right" ng-click="cancelarRes()">Cancelar</button>    
     </div>
   </form>
 </div>
