--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -124,3 +124,13 @@ button {
     width: 100%;
     margin-top: 10px;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
