--- a/public/views/operario/pacientes.html
+++ b/public/views/operario/pacientes.html
@@ -68,29 +68,29 @@
 
 <div id="modalEditarPaciente" class="modal" style="padding-left:25px;padding-right:25px;padding-top:30px;margin-top:-10px">
   <h5 class="text-center teal-text">Datos de Paciente</h5>
-  <form >
+  <form ng-submit="putPaciente()">
     <div class="container-fluid center">
         <div class="form-group">
-          <input type="text" class="form-control" name="nombre" ng-model="editar_paciente.nombre" placeholder="Nombre">
+          <input type="text" class="form-control" name="nombre" required ng-model="editar_paciente.nombre" placeholder="Nombre">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="apellido" ng-model="editar_paciente.apellido" placeholder="Apellido">
+          <input type="text" class="form-control" name="apellido" required ng-model="editar_paciente.apellido" placeholder="Apellido">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="cedula" ng-model="editar_paciente.cedula" placeholder="Cedula">
+          <input type="text" pattern="^[0-9]{10}" title="Numero de cedula invalido" class="form-control" name="cedula" required ng-model="editar_paciente.cedula" placeholder="Cedula">
         </div>
         <div class="form-group">
           <input type="email" class="form-control" name="correo" ng-model="editar_paciente.correo" placeholder="Correo" readonly>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="direccion" ng-model="editar_paciente.direccion" placeholder="Direccion">
+          <input type="text" class="form-control" name="direccion" required ng-model="editar_paciente.direccion" placeholder="Direccion">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="telefono" ng-model="editar_paciente.telefono" placeholder="Telefono">
+          <input type="text" pattern="^[0-9]{7,10}" title="Numero de telefono invalido" class="form-control" name="telefono" required ng-model="editar_paciente.telefono" placeholder="Telefono">
         </div>
         <div class="row">
-          <button type="submit" class="btn btn-primary col s4" ng-click="putPaciente()">Editar</button>
-          <button type="submit" class="btn btn-primary col s4 right" ng-click="cerrarMod()">Cerrar</button>
+          <button type="submit" class="btn btn-primary col s4" >Editar</button>
+          <button class="btn btn-primary col s4 right" ng-click="cerrarMod()">Cerrar</button>
         </div>
     </div>
   </form>
