...cambiando acordeon por tabla

--- a/views/app/footer.ejs
+++ b/views/app/footer.ejs
@@ -21,6 +21,6 @@
 </div>
 <div class="footer-copyright">
   <div class="container">
-    Made by <a class="brown-text text-lighten-3" href="https://github.com/wjvelez">MEAN Team</a>
+    Made by <a class="brown-text text-lighten-3" target="_blank" href="https://github.com/wjvelez">MEAN Team</a>
   </div>
 </div>
