--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,23 +1,23 @@
 <div class="container">
+<!--
     <h4 class="text-center teal-text">Examenes del paciente</h4>
     <hr>
-
     <div >
         <input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar resultados">
     </div>
 
-    <ul class="collapsible popout" data-collapsible="accordion">
+    <ul class="collapsible" data-collapsible="accordion">
         <li ng-repeat="examen in examenes | filter:busqueda">
 
             <div class="collapsible-header">
-                <div class="container row fila">
-                    <div class="col s3">
-                        <i class="material-icons">label</i>Examen medico: {{examen.nombre}}    
+                <div class="container-fluid row">
+                  <div class="col m3 s12">
+                        <i class="material-icons">label</i>{{examen.nombre}}    
                     </div>
-                    <div class="col s3">
+                    <div class="col m3 s12">
                         Fecha: {{examen._muestra.fecha | date: 'dd-MM-yyyy'}}
                     </div>
-                    <div class="col s3">
+                    <div class="col m3 s12">
                         Estado: {{examen._muestra.estado}}
                     </div>
                 </div>
@@ -49,8 +49,36 @@
             </table>
             </div>
         </li>
-    </ul>    
+    </ul> 
+    -->   
 </div>
 
 
-
+<div class="container" ng-controller="ctrlExamenes">
+  <div class="container" style="padding-top:20px">
+    <form class="form-inline">
+        <div class="form-group">
+            <input type="text" ng-model="search" class="form-control" placeholder="Buscar">
+        </div>
+    </form>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <td class="text-center">Examen</td>
+          <td class="text-center">Fecha</td>
+          <td class="text-center">Estado</td>
+          <td class="text-center">Ver</td>
+          <td class="text-center">Descargar</td>
+        </tr>
+      </thead>
+            <tr ng-repeat="examen in examenes | filter:search">
+                <td class="text-center">{{examen.nombre}}</td>
+                <td class="text-center">{{examen._muestra.fecha | date: 'dd-MM-yyyy'}}</td>
+                <td class="text-center">{{examen._muestra.estado}}</td>
+                <td class="text-center">Ver</td>
+                <td class="text-center">Descargar</td>
+            </tr>
+  </table>  
+  </div>
+  
+</div>
