--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -56,11 +56,7 @@
 
 <div class="container" ng-controller="ctrlExamenes">
   <div class="container" style="padding-top:20px">
-    <form class="form-inline">
-        <div class="form-group">
-            <input type="text" ng-model="search" class="form-control" placeholder="Buscar">
-        </div>
-    </form>
+    <div ><input type="search" name="busqueda" ng-model="search" placeholder="Buscar"></div>
     <table class="table table-striped table-hover">
       <thead>
         <tr>
@@ -75,8 +71,8 @@
                 <td class="text-center">{{examen.nombre}}</td>
                 <td class="text-center">{{examen._muestra.fecha | date: 'dd-MM-yyyy'}}</td>
                 <td class="text-center">{{examen._muestra.estado}}</td>
-                <td class="text-center">Ver</td>
-                <td class="text-center">Descargar</td>
+                <td class="text-center"><span style="vertical-align:middle;" class="glyphicon glyphicon-eye-open" ng-click="cargarResultados(examen)"></span></td>
+                <td class="text-center"><span style="vertical-align:middle;" class="glyphicon glyphicon-download-alt" ng-click="descargarResultados(examen)"></span></td>
             </tr>
   </table>  
   </div>
