--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -3,6 +3,8 @@
   <head>
     <title>Salud Primero - Laboratorista</title>
     <% include app/scripts %>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/esvit/ng-table/1.0.0/dist/ng-table.min.css">
+    <script src="https://cdn.rawgit.com/esvit/ng-table/1.0.0/dist/ng-table.js"></script>
     <script type="text/javascript" src="scripts/laboratorista/appAngular.js"></script>
   </head>
 
