--- a/public/views/laboratorista/examenes.html
+++ b/public/views/laboratorista/examenes.html
@@ -10,6 +10,7 @@
           <div ng-click="nuevoResultado(examen)" style="padding-top:10px;" class="col m5 s12"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
 
         </div>
+        <!--
         <div class="table-responsive">
           <table class="table table-striped table-bordered">
           <thead>
@@ -32,6 +33,7 @@
           </tbody>
         </table>
         </div>
+        -->
           
         </div>
     </li>
@@ -74,4 +76,25 @@
           <button type="reset" class="btn btn-default col s5 right" ng-click="cancelarRes()">Cancelar</button>    
     </div>
   </form>
+</div>
+
+
+<div class="container" ng-controller="controllerExamenes">
+          <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th class="text-center">Examen</th>
+              <th class="text-center">Resultados</th>
+              <th class="text-center">Ver</th>
+              
+            </tr>
+          </thead>
+          <tbody>
+              <tr ng-repeat="examen in examenes">
+                  <td class="text-center"> {{ examen.nombre }} </td>
+                  <td class="text-center"> {{ examen.resultados.length }} </td>
+                  <td class="text-center"><span style="vertical-align:middle;" class="glyphicon glyphicon-eye-open"></span></td>
+              </tr>
+          </tbody>
+        </table>
 </div>
