--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -54,6 +54,8 @@
 </div>
 
 
+
+
 <div class="container" ng-controller="ctrlExamenes">
   <div class="container" style="padding-top:20px">
     <div ><input type="search" name="busqueda" ng-model="search" placeholder="Buscar"></div>
@@ -64,7 +66,6 @@
           <td class="text-center">Fecha</td>
           <td class="text-center">Estado</td>
           <td class="text-center">Ver</td>
-          <td class="text-center">Descargar</td>
         </tr>
       </thead>
       <tbody>
@@ -72,12 +73,35 @@
           <td class="text-center">{{examen.nombre}}</td>
           <td class="text-center">{{examen._muestra.fecha | date: 'dd-MM-yyyy'}}</td>
           <td class="text-center">{{examen._muestra.estado}}</td>
-          <td class="text-center"><span style="vertical-align:middle;" class="glyphicon glyphicon-eye-open" ng-click="cargarResultados(examen)"></span></td>
-          <td class="text-center"><span style="vertical-align:middle;" class="glyphicon glyphicon-download-alt" ng-click="descargarResultados(examen)"></span></td>
+          <td class="text-center"><span style="vertical-align:middle;" class="glyphicon glyphicon-eye-open" ng-click="verResultados(examen)"></span></td>
         </tr>
       </tbody>
             
   </table>  
   </div>
+  <div id="modalRes" class="modal gray">
+  <div class="container-fluid">
+    
+    <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th class="text-center">Parámetro</th>
+            <th class="text-center">Unidades</th>
+            <th class="text-center">Resultado</th>
+            <th class="text-center">Valores/Referencia</th>
+          </tr>
+        </thead>
+
+        <tbody>
+            <tr ng-repeat="resultado in actual.resultados">
+                <td class="text-center"> {{ resultado.parametro }} </td>
+                <td class="text-center"> {{ resultado.unidades }} </td>
+                <td class="text-center"> {{ resultado.resultado }} </td>
+                <td class="text-center"> {{ resultado.valores_referencia }} </td>
+            </tr>
+        </tbody>
+      </table>
+  </div>
+</div>
   
 </div>
