--- a/public/views/laboratorista/examenes.html
+++ b/public/views/laboratorista/examenes.html
@@ -10,7 +10,7 @@
           <div ng-click="nuevoResultado(examen)" style="padding-top:10px;" class="col m5 s12"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
 
         </div>
-        <!--
+        
         <div class="table-responsive">
           <table class="table table-striped table-bordered">
           <thead>
@@ -33,7 +33,7 @@
           </tbody>
         </table>
         </div>
-        -->
+        
           
         </div>
     </li>
@@ -78,7 +78,7 @@
   </form>
 </div>
 
-
+<!--
 <div class="container" ng-controller="controllerExamenes">
           <table class="table table-striped table-bordered">
           <thead>
@@ -97,4 +97,4 @@
               </tr>
           </tbody>
         </table>
-</div>
+</div>-->
