eliminacion de URLs en los state

--- a/views/user/sideLaboratorista.ejs
+++ b/views/user/sideLaboratorista.ejs
@@ -6,7 +6,7 @@
       <a href="/laboratorista"><span class="white-text email">Laboratorista</span></a>
     </div>
   </li>
-  <li><a class="waves-effect teal-text" href="#"><i class="material-icons">view_column</i>Muestras</a></li>
+  <li><a class="waves-effect teal-text" ui-sref="muestras"><i class="material-icons">view_column</i>Muestras</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect teal-text" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
 </ul>
