--- a/views/operario.ejs
+++ b/views/operario.ejs
@@ -17,7 +17,7 @@
     <div id="errorLogin" class="alert alert-danger collapse" role="alert"></div>
 
     <header class="container">
-      <% include user/sideOperario %>
+      <% include side/sideOperario %>
     </header>
 
     <main>
@@ -33,7 +33,7 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="scripts/materialize.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.js"></script>
     <script src="scripts/init.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.12/datatables.min.js"></script>
