--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
     <title>Login</title>
   	<!-- CSS  -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	
+	<!-- MATERIALIZE -->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 	<link href="styles/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	<!-- MATERIALIZE -->
 
 	<!-- Angular views -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
@@ -24,7 +26,7 @@
 	</footer>
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="scripts/materialize.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.js"></script>
 	<script src="scripts/init.js"></script>
   </body>
 </html>
